--- a/todolist/package.json
+++ b/todolist/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.0",
+    "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
